added functionality to upload images into firestore database.

--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -16,4 +16,8 @@ page-feed {
             border-right: 1px solid map-get($colors, light );
         }
     }
+
+    .round-corners {
+        border-radius: 24px;
+    }
 }
